--- a/rafael.html
+++ b/rafael.html
@@ -8,6 +8,10 @@
   <link rel="stylesheet" href="./styles/rafael.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>Netflix | Clone</title>
+  <!--owl css-->
+  <link rel="stylesheet" href="styles/owl/owl.carousel.min.css">
+  <link rel="stylesheet" href="styles/owl/owl.theme.default.min.css">
+
 </head>
 <body>
 
@@ -49,9 +53,48 @@
           </button>
         </div>
       </div>
+      <h4 class="carrossel-titulo">Continuar assistindo como Rafael</h4>
     </div>
   </main>
+
+  <div class="carrossel-filmes">
+    <div class="owl-carousel owl-theme">
+      <div class="item">
+        <img class="box-filme" src="imgs/mini1.jpg" alt="">
+      </div>
+      <div class="item">
+        <img class="box-filme" src="imgs/mini2.jpg" alt="">
+      </div>
+      <div class="item">
+        <img class="box-filme" src="imgs/mini3.jpg" alt="">
+      </div>
+      <div class="item">
+        <img class="box-filme" src="imgs/mini4.jpg" alt="">
+      </div>
+      <div class="item">
+        <img class="box-filme" src="imgs/mini5.jpg" alt="">
+      </div>
+      <div class="item">
+        <img class="box-filme" src="imgs/mini6.jpg" alt="">
+      </div>
+      <div class="item">
+        <img class="box-filme" src="imgs/mini7.jpg" alt="">
+      </div>
+      <div class="item">
+        <img class="box-filme" src="imgs/mini8.jpg" alt="">
+      </div>
+      <div class="item">
+        <img class="box-filme" src="imgs/mini9.jpg" alt="">
+      </div>
+      <div class="item">
+        <img class="box-filme" src="imgs/mini10.jpg" alt="">
+      </div>
+    </div>
+  </div>
   
+  <script src="js/owl/jquery.min.js"></script>
+  <script src="js/owl/owl.carousel.min.js"></script>
   <script src="/js/script.js"></script>
+
 </body>
 </html>
